[gd_scene load_steps=80 format=4 uid="uid://cib2gsrnko6yt"]

[ext_resource type="Texture2D" uid="uid://bhmk1f7fkde5f" path="res://kenney_new-platformer-pack-1.0/Sprites/Tiles/Default/terrain_grass_block.png" id="1_7hoiu"]
[ext_resource type="PackedScene" uid="uid://o5vncuvrdx1" path="res://collectible.tscn" id="1_bwoky"]
[ext_resource type="Script" path="res://player.gd" id="1_cyaue"]
[ext_resource type="Texture2D" uid="uid://cwnhu300npah2" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_purple_idle.png" id="2_jrjk5"]
[ext_resource type="Texture2D" uid="uid://bgfar8kix0s2h" path="res://kenney_new-platformer-pack-1.0/Sprites/Tiles/Default/terrain_grass_block_bottom.png" id="2_ry72x"]
[ext_resource type="Texture2D" uid="uid://buuf7brfed43i" path="res://kenney_new-platformer-pack-1.0/Sprites/Tiles/Default/terrain_grass_block_right.png" id="3_kaqha"]
[ext_resource type="Texture2D" uid="uid://dd5puqgnttry2" path="res://kenney_new-platformer-pack-1.0/Vector/Backgrounds/background_clouds.svg" id="3_xu4ml"]
[ext_resource type="Texture2D" uid="uid://dwb2b58t3ldos" path="res://kenney_new-platformer-pack-1.0/Sprites/Backgrounds/Default/background_fade_hills.png" id="4_c2s3j"]
[ext_resource type="Texture2D" uid="uid://dd8o5gjw3v1" path="res://kenney_new-platformer-pack-1.0/Sprites/Tiles/Default/terrain_grass_block_top.png" id="4_r0dax"]
[ext_resource type="Texture2D" uid="uid://8dkl4f25ad6e" path="res://kenney_new-platformer-pack-1.0/Vector/Tiles/flag_blue_a.svg" id="5_gwfjq"]
[ext_resource type="Texture2D" uid="uid://botc3gyhb1coa" path="res://kenney_new-platformer-pack-1.0/Sprites/Tiles/Default/terrain_grass_block_top_right.png" id="5_npvlc"]
[ext_resource type="Texture2D" uid="uid://18jcrxh5qige" path="res://kenney_new-platformer-pack-1.0/Sprites/Backgrounds/Default/background_color_trees1.png" id="5_pbn2h"]
[ext_resource type="Texture2D" uid="uid://bqci44o3k5de4" path="res://kenney_new-platformer-pack-1.0/Sprites/Tiles/Default/block_empty.png" id="6_3illi"]
[ext_resource type="Texture2D" uid="uid://bd5wdmfbbjv73" path="res://kenney_new-platformer-pack-1.0/Sprites/Tiles/Default/terrain_grass_block_top_left.png" id="6_jnbnk"]
[ext_resource type="Texture2D" uid="uid://vro1ywredevp" path="res://kenney_new-platformer-pack-1.0/Sprites/Tiles/Default/terrain_grass_block_bottom_left.png" id="7_apkf4"]
[ext_resource type="Texture2D" uid="uid://kvl1uxw4ad52" path="res://kenney_new-platformer-pack-1.0/Sprites/Tiles/Default/terrain_grass_block_bottom_right.png" id="8_mowch"]
[ext_resource type="Texture2D" uid="uid://xf0dbsukkqd2" path="res://kenney_new-platformer-pack-1.0/Sprites/Tiles/Default/terrain_grass_block_left.png" id="9_8j38p"]
[ext_resource type="Script" path="res://goal_flag.gd" id="10_pi24x"]
[ext_resource type="Texture2D" uid="uid://e3c8kx13gks" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_beige_climb_a.png" id="12_5r3xl"]
[ext_resource type="Texture2D" uid="uid://ckbba7xyaj1sl" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_green_idle.png" id="13_45oqr"]
[ext_resource type="Texture2D" uid="uid://6x5xn12lrgf5" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_green_climb_b.png" id="13_nvoel"]
[ext_resource type="Texture2D" uid="uid://ciybskmnww3ru" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_purple_walk_a.png" id="13_oaodw"]
[ext_resource type="Texture2D" uid="uid://dra87u05exlkr" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_purple_walk_b.png" id="14_j1eef"]
[ext_resource type="Texture2D" uid="uid://bcbmr60tpwdby" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_pink_climb_a.png" id="14_otvby"]
[ext_resource type="Texture2D" uid="uid://c1ld5tc8jresi" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_yellow_idle.png" id="14_rox7a"]
[ext_resource type="Texture2D" uid="uid://v2b1jms6r17j" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_pink_idle.png" id="15_pfjb8"]
[ext_resource type="Texture2D" uid="uid://cxpohe55lbly0" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_yellow_climb_a.png" id="15_qgy0k"]
[ext_resource type="Texture2D" uid="uid://d2fg3m4x7oxqq" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_purple_climb_b.png" id="16_8m7m5"]
[ext_resource type="Texture2D" uid="uid://bkrert5qvvxq1" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_beige_idle.png" id="16_i3tq4"]
[ext_resource type="Texture2D" uid="uid://d0b5s2asaxywp" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_beige_walk_a.png" id="17_8byq8"]
[ext_resource type="Texture2D" uid="uid://cmxg2qi5mkllj" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_yellow_jump.png" id="17_tqd0f"]
[ext_resource type="Texture2D" uid="uid://dxufmabypos0c" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_yellow_duck.png" id="17_tx2y7"]
[ext_resource type="Texture2D" uid="uid://bdymlsjnow47h" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_purple_jump.png" id="18_c54k3"]
[ext_resource type="Texture2D" uid="uid://cj4n24ief21wu" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_purple_duck.png" id="18_p8cig"]
[ext_resource type="Texture2D" uid="uid://c2ujfgw4x51qp" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_pink_duck.png" id="19_crv6t"]
[ext_resource type="Texture2D" uid="uid://dc3qroe8wy68v" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_green_walk_a.png" id="19_dsxxj"]
[ext_resource type="Texture2D" uid="uid://b2v04n4vwrkcm" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_pink_jump.png" id="19_oy2qw"]
[ext_resource type="Texture2D" uid="uid://fe6reg30obv6" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_beige_walk_b.png" id="20_5uxbb"]
[ext_resource type="Texture2D" uid="uid://650jqr61vekj" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_green_duck.png" id="20_7vexb"]
[ext_resource type="Texture2D" uid="uid://cfu1bhqiylujd" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_green_jump.png" id="20_kghda"]
[ext_resource type="Texture2D" uid="uid://b0vgl8kiv3ej1" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_beige_jump.png" id="21_33jm3"]
[ext_resource type="Texture2D" uid="uid://cd5qxgunkhw0h" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_beige_duck.png" id="21_bqqu4"]
[ext_resource type="Texture2D" uid="uid://dj7kurhj0dumm" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_green_walk_b.png" id="22_o5abd"]
[ext_resource type="Texture2D" uid="uid://duu6a6ia6lvlx" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_yellow_front.png" id="22_s1vo0"]
[ext_resource type="Texture2D" uid="uid://dalyquxolxe76" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_purple_front.png" id="23_k340o"]
[ext_resource type="Texture2D" uid="uid://d2ji6frphhru8" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_pink_front.png" id="24_xeh44"]
[ext_resource type="Texture2D" uid="uid://g43g35t36j4l" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_green_front.png" id="25_s1fvp"]
[ext_resource type="Texture2D" uid="uid://bvkohlewxej74" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_beige_front.png" id="26_wxo7g"]
[ext_resource type="Texture2D" uid="uid://cyhfv623whfs2" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_beige_hit.png" id="27_tav71"]
[ext_resource type="Texture2D" uid="uid://7ckv2ilmqdfi" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_green_hit.png" id="28_obmac"]
[ext_resource type="Texture2D" uid="uid://yt5qff3d6x5k" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_pink_hit.png" id="29_o3on5"]
[ext_resource type="Texture2D" uid="uid://ckro7lcds7eer" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_purple_hit.png" id="30_0f800"]
[ext_resource type="Texture2D" uid="uid://cch4s1byyqfe5" path="res://kenney_new-platformer-pack-1.0/Sprites/Characters/Default/character_yellow_hit.png" id="31_kae71"]
[ext_resource type="FontFile" uid="uid://b22wpkf2pqn8c" path="res://kenney_new-platformer-pack-1.0/Sprites/Tiles/Default/8-BIT WONDER.TTF" id="53_1ednh"]
[ext_resource type="Texture2D" uid="uid://cnix3kgtplqpd" path="res://kenney_new-platformer-pack-1.0/Sprites/Tiles/Default/hud_coin.png" id="54_5s1tc"]
[ext_resource type="Texture2D" uid="uid://bo1knk66qp3t5" path="res://kenney_new-platformer-pack-1.0/Sprites/Tiles/Default/hud_heart.png" id="55_qqkb4"]
[ext_resource type="AudioStream" uid="uid://pntekwd2gtg1" path="res://kenney_new-platformer-pack-1.0/Sounds/background_music/song17.mp3" id="57_tkyxh"]
[ext_resource type="AudioStream" uid="uid://bxgh5uu5o50yd" path="res://kenney_new-platformer-pack-1.0/Sounds/sfx_jump.ogg" id="58_mllo4"]
[ext_resource type="AudioStream" uid="uid://dj8pkdak1hufn" path="res://kenney_new-platformer-pack-1.0/Sounds/sfx_gem.ogg" id="59_mf221"]
[ext_resource type="AudioStream" uid="uid://u055olgym8yb" path="res://kenney_new-platformer-pack-1.0/Sounds/Audio/impactBell_heavy_004.ogg" id="60_aoq2y"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7v8pi"]
texture = ExtResource("1_7hoiu")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -5, 32, -4.5, 32, -32, -32, -32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_c6nhu"]
texture = ExtResource("2_ry72x")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5c1qd"]
texture = ExtResource("3_kaqha")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(5, -32, 32, -32, 32, 32, 5.5, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vpgnr"]
texture = ExtResource("4_r0dax")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vn7lu"]
texture = ExtResource("5_npvlc")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -5.5, -32, -5, -32, -32, 32, -32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jmt2w"]
texture = ExtResource("6_3illi")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_n2c6n"]
texture = ExtResource("6_jnbnk")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -4, 32, -4.5, 32, -32, -32, -32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vk15v"]
texture = ExtResource("2_ry72x")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_48t6q"]
texture = ExtResource("7_apkf4")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-11, -32, -32, -32, -32, 32, -11, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ea1s6"]
texture = ExtResource("8_mowch")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(6, -32, 32, -32, 32, 32, 6, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kv6ak"]
texture = ExtResource("9_8j38p")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, -7, -32, -5, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_g7vtn"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 0
sources/0 = SubResource("TileSetAtlasSource_7v8pi")
sources/1 = SubResource("TileSetAtlasSource_c6nhu")
sources/2 = SubResource("TileSetAtlasSource_vpgnr")
sources/3 = SubResource("TileSetAtlasSource_vn7lu")
sources/5 = SubResource("TileSetAtlasSource_n2c6n")
sources/6 = SubResource("TileSetAtlasSource_vk15v")
sources/7 = SubResource("TileSetAtlasSource_48t6q")
sources/8 = SubResource("TileSetAtlasSource_ea1s6")
sources/9 = SubResource("TileSetAtlasSource_kv6ak")
sources/10 = SubResource("TileSetAtlasSource_5c1qd")
sources/4 = SubResource("TileSetAtlasSource_jmt2w")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lqro2"]
size = Vector2(56, 56)

[sub_resource type="SpriteFrames" id="SpriteFrames_55116"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_5r3xl")
}, {
"duration": 1.0,
"texture": ExtResource("13_nvoel")
}, {
"duration": 1.0,
"texture": ExtResource("14_otvby")
}, {
"duration": 1.0,
"texture": ExtResource("15_qgy0k")
}, {
"duration": 1.0,
"texture": ExtResource("16_8m7m5")
}],
"loop": true,
"name": &"climb",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_tx2y7")
}, {
"duration": 1.0,
"texture": ExtResource("18_p8cig")
}, {
"duration": 1.0,
"texture": ExtResource("19_crv6t")
}, {
"duration": 1.0,
"texture": ExtResource("20_7vexb")
}, {
"duration": 1.0,
"texture": ExtResource("21_bqqu4")
}],
"loop": true,
"name": &"duck",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_s1vo0")
}, {
"duration": 1.0,
"texture": ExtResource("23_k340o")
}, {
"duration": 1.0,
"texture": ExtResource("24_xeh44")
}, {
"duration": 1.0,
"texture": ExtResource("25_s1fvp")
}, {
"duration": 1.0,
"texture": ExtResource("26_wxo7g")
}],
"loop": true,
"name": &"front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_tav71")
}, {
"duration": 1.0,
"texture": ExtResource("28_obmac")
}, {
"duration": 1.0,
"texture": ExtResource("29_o3on5")
}, {
"duration": 1.0,
"texture": ExtResource("30_0f800")
}, {
"duration": 1.0,
"texture": ExtResource("31_kae71")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jrjk5")
}, {
"duration": 1.0,
"texture": ExtResource("13_45oqr")
}, {
"duration": 1.0,
"texture": ExtResource("14_rox7a")
}, {
"duration": 1.0,
"texture": ExtResource("15_pfjb8")
}, {
"duration": 1.0,
"texture": ExtResource("16_i3tq4")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_tqd0f")
}, {
"duration": 1.0,
"texture": ExtResource("18_c54k3")
}, {
"duration": 1.0,
"texture": ExtResource("19_oy2qw")
}, {
"duration": 1.0,
"texture": ExtResource("20_kghda")
}, {
"duration": 1.0,
"texture": ExtResource("21_33jm3")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_8byq8")
}, {
"duration": 1.0,
"texture": ExtResource("14_j1eef")
}, {
"duration": 1.0,
"texture": ExtResource("19_dsxxj")
}, {
"duration": 1.0,
"texture": ExtResource("20_5uxbb")
}, {
"duration": 1.0,
"texture": ExtResource("13_oaodw")
}, {
"duration": 1.0,
"texture": ExtResource("22_o5abd")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qyclf"]
size = Vector2(71, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xq05i"]
size = Vector2(5226, 122)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8xdt6"]
bg_color = Color(0.788235, 0.764706, 0.788235, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.00184107, 0.00184107, 0.00184107, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bs35v"]
bg_color = Color(0.784314, 0.529412, 0.431373, 0.4)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.000693897, 0.000693898, 0.000693897, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s5di0"]
bg_color = Color(0.0117647, 0, 0, 0.694118)
corner_radius_top_left = 13
corner_radius_top_right = 13
corner_radius_bottom_right = 13
corner_radius_bottom_left = 13

[node name="Level_Prototype" type="Node2D"]

[node name="TileMap" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAADAAoAAAAAAAAAAAAEAAoAAAAAAAAAAAAFAAoAAAAAAAAAAAAGAAoAAAAAAAAAAAAHAAoAAAAAAAAAAAAIAAoAAAAAAAAAAAAJAAoAAAAAAAAAAAAKAAoAAAAAAAAAAAALAAoAAAAAAAAAAAAMAAoAAAAAAAAAAAANAAoAAAAAAAAAAAAOAAoAAAAAAAAAAAAPAAoAAAAAAAAAAAAQAAoAAAAAAAAAAAARAAoAAAAAAAAAAAASAAoAAAAAAAAAAAATAAoAAAAAAAAAAAAUAAoAAAAAAAAAAAAVAAoAAAAAAAAAAAAWAAoAAAAAAAAAAAAbAAoAAAAAAAAAAAAcAAoAAAAAAAAAAAAdAAoAAAAAAAAAAAAVAAcAAAAAAAAAAAAXAAUAAAAAAAAAAAAZAAQAAAAAAAAAAAAbAAUAAAAAAAAAAAAcAAUAAAAAAAAAAAAdAAUAAAAAAAAAAAAeAAUAAAAAAAAAAAAhAAoAAAAAAAAAAAAiAAoAAAAAAAAAAAAjAAoABwAAAAAAAAAkAAoACAAAAAAAAAAlAAoAAAAAAAAAAAAmAAoAAAAAAAAAAAAnAAoAAAAAAAAAAAAjAAkACQAAAAAAAAAkAAkACgAAAAAAAAAlAAkAAAAAAAAAAAAjAAgACQAAAAAAAAAkAAgACgAAAAAAAAAlAAgAAAAAAAAAAAAjAAcABQAAAAAAAAAkAAcAAwAAAAAAAAAfAAMAAAAAAAAAAAAgAAMAAAAAAAAAAAAlAAIAAAAAAAAAAAAmAAIAAAAAAAAAAAAnAAIAAAAAAAAAAAAoAAIAAAAAAAAAAAApAAIAAAAAAAAAAAAPAAUAAAAAAAAAAAAZAAEAAAAAAAAAAAAYAAEAAAAAAAAAAAAXAAEAAAAAAAAAAAAUAAgAAAAAAAAAAAAWAAYAAAAAAAAAAAARAAYAAAAAAAAAAAAiAAEAAAAAAAAAAAAwAAIAAAAAAAAAAAAxAAIAAAAAAAAAAAAyAAIAAAAAAAAAAAAMAAkABAAAAAAAAAACAAoAAAAAAAAAAAABAAoAAAAAAAAAAAAAAAoAAAAAAAAAAAD6/woAAAAAAAAAAAD7/woAAAAAAAAAAAD8/woAAAAAAAAAAAD9/woAAAAAAAAAAAD+/woAAAAAAAAAAAD//woAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_g7vtn")

[node name="GoalFlag" type="Area2D" parent="." groups=["Goal"]]
position = Vector2(1400, 424)
script = ExtResource("10_pi24x")

[node name="Sprite2D" type="Sprite2D" parent="GoalFlag"]
position = Vector2(1822, -325)
texture = ExtResource("5_gwfjq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalFlag"]
position = Vector2(1820, -324)
shape = SubResource("RectangleShape2D_lqro2")

[node name="CollectibleGroup" type="Node2D" parent="."]

[node name="Collectible" parent="CollectibleGroup" instance=ExtResource("1_bwoky")]
position = Vector2(1568, 24)

[node name="Collectible2" parent="CollectibleGroup" instance=ExtResource("1_bwoky")]
position = Vector2(1856, 224)

[node name="Collectible3" parent="CollectibleGroup" groups=["Player"] instance=ExtResource("1_bwoky")]
position = Vector2(2520, 40)

[node name="Player" type="CharacterBody2D" parent="." groups=["Player"]]
position = Vector2(406, 320)
script = ExtResource("1_cyaue")
speed = 500
jump_velocity = -700

[node name="Camera2D" type="Camera2D" parent="Player"]
limit_top = -1000
limit_bottom = 720
position_smoothing_enabled = true
position_smoothing_speed = 2.5

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_55116")
animation = &"front"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
visible = false
position = Vector2(1.5, 22)
shape = SubResource("RectangleShape2D_qyclf")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true

[node name="Clouds" type="ParallaxLayer" parent="ParallaxBackground"]
texture_repeat = 3
motion_scale = Vector2(0.5, 0)
motion_mirroring = Vector2(512, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Clouds"]
texture_repeat = 2
texture = ExtResource("3_xu4ml")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 1280, 256)

[node name="MountainsLayer" type="ParallaxLayer" parent="ParallaxBackground"]
texture_repeat = 3
position = Vector2(0, 254)
motion_scale = Vector2(0.25, 0)
motion_mirroring = Vector2(512, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/MountainsLayer"]
texture_repeat = 3
position = Vector2(0, 1)
texture = ExtResource("4_c2s3j")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 1280, 256)

[node name="Trees" type="ParallaxLayer" parent="ParallaxBackground"]
texture_repeat = 3
motion_scale = Vector2(0.1, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Trees"]
top_level = true
texture_filter = 1
texture_repeat = 2
position = Vector2(0, 269)
scale = Vector2(1.48438, 1.48438)
texture = ExtResource("5_pbn2h")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 1280, 256)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(464, 216)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(552, 544)
shape = SubResource("RectangleShape2D_xq05i")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
texture_filter = 1
offset_left = 552.0
offset_top = 48.0
offset_right = 904.0
offset_bottom = 128.0
theme_override_fonts/font = ExtResource("53_1ednh")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_8xdt6")
text = "SCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 204.0
offset_top = -89.0
offset_right = 935.0
offset_bottom = -32.0
grow_vertical = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 1, 1, 0.47451)
theme_override_colors/font_shadow_color = Color(0.152941, 0.113725, 0.478431, 0.247059)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("53_1ednh")
theme_override_font_sizes/font_size = 30
text = "LEVEL COMPLETE - Great Job!!"
autowrap_mode = 2

[node name="HUD" type="CanvasLayer" parent="."]

[node name="HUDPanel" type="Panel" parent="HUD"]
offset_left = 280.0
offset_top = 48.0
offset_right = 512.0
offset_bottom = 128.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bs35v")

[node name="HUDBox" type="HBoxContainer" parent="HUD/HUDPanel"]
layout_mode = 0
offset_right = 280.0
offset_bottom = 80.0

[node name="CoinIcon" type="TextureRect" parent="HUD/HUDPanel/HUDBox"]
layout_mode = 2
texture = ExtResource("54_5s1tc")
stretch_mode = 5

[node name="CoinLabel" type="Label" parent="HUD/HUDPanel/HUDBox"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("53_1ednh")
text = "x 0"

[node name="HeartIcon" type="TextureRect" parent="HUD/HUDPanel/HUDBox"]
layout_mode = 2
texture = ExtResource("55_qqkb4")
stretch_mode = 5

[node name="HeartLabel" type="Label" parent="HUD/HUDPanel/HUDBox"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("53_1ednh")
text = "x 3"

[node name="CanvasPause" type="CanvasLayer" parent="."]

[node name="PauseMenu" type="Control" parent="CanvasPause"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PausePanel" type="Panel" parent="CanvasPause/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s5di0")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasPause/PauseMenu/PausePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.0
offset_right = 57.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="CanvasPause/PauseMenu/PausePanel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="RestartButton" type="Button" parent="CanvasPause/PauseMenu/PausePanel/VBoxContainer"]
layout_mode = 2
text = "Re-Start"

[node name="QuitButton" type="Button" parent="CanvasPause/PauseMenu/PausePanel/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Node2D" type="Node2D" parent="."]

[node name="BGMPlayer" type="AudioStreamPlayer2D" parent="Node2D"]
stream = ExtResource("57_tkyxh")
autoplay = true
max_distance = 4000.0
parameters/looping = true

[node name="JumpSFX" type="AudioStreamPlayer2D" parent="Node2D"]
unique_name_in_owner = true
stream = ExtResource("58_mllo4")
volume_db = -2.0
max_distance = 4000.0

[node name="CollectSFX" type="AudioStreamPlayer2D" parent="Node2D"]
unique_name_in_owner = true
stream = ExtResource("59_mf221")

[node name="WinSFX" type="AudioStreamPlayer2D" parent="Node2D"]
unique_name_in_owner = true
stream = ExtResource("60_aoq2y")

[connection signal="body_entered" from="GoalFlag" to="GoalFlag" method="_on_body_entered"]
[connection signal="pressed" from="CanvasPause/PauseMenu/PausePanel/VBoxContainer/ResumeButton" to="Player" method="_on_resume_button_pressed"]
[connection signal="pressed" from="CanvasPause/PauseMenu/PausePanel/VBoxContainer/RestartButton" to="Player" method="_on_restart_button_pressed"]
